# CMakeList.txt : CMake project for Dynamic Memory, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Dynamic Memory.cpp" "Dynamic Memory.h")

# TODO: Add tests and install targets if needed.
